[gd_scene load_steps=4 format=3 uid="uid://c4knvaxcb15ur"]

[ext_resource type="Script" uid="uid://ccga2v83pl52d" path="res://enemies/enemy.gd" id="1_qw6q8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37cu2"]
size = Vector2(63, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_qw6q8"]
radius = 88.71

[node name="EnemyTemplate" type="CharacterBody2D" node_paths=PackedStringArray("_dash_wait_time", "_dash_timer")]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qw6q8")
_dash_wait_time = NodePath("DashWaitTime")
_dash_timer = NodePath("DashTimer")

[node name="Texture" type="Sprite2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_37cu2")

[node name="RangeArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_qw6q8")

[node name="DashWaitTime" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="timeout" from="DashWaitTime" to="." method="_on_dash_wait_time_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
